// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CategoryListItem should render and match snapshot 1`] = `
<CategoryListItem__Row>
  <CategoryListItem__StyledLink
    to="/augsburg/de/willkommen"
  >
    <CategoryListItem__CategoryThumbnail
      src="https://cms.integreat-ap…03/Beratung-150x150.png"
    />
    <CategoryListItem__CategoryCaption
      search=""
    >
      Willkommen
    </CategoryListItem__CategoryCaption>
  </CategoryListItem__StyledLink>
  <CategoryListItem__SubCategory
    key="5234"
  >
    <CategoryListItem__StyledLink
      to="/augsburg/de/test"
    >
      <CategoryListItem__SubCategoryCaption
        search=""
      >
        Child
      </CategoryListItem__SubCategoryCaption>
    </CategoryListItem__StyledLink>
  </CategoryListItem__SubCategory>
</CategoryListItem__Row>
`;

exports[`CategoryListItem should replace empty thumbnail 1`] = `
<CategoryListItem__Row>
  <CategoryListItem__StyledLink
    to="/augsburg/de/willkommen/willkommen-in-augsburg"
  >
    <CategoryListItem__CategoryThumbnail
      src="test-file-stub"
    />
    <CategoryListItem__CategoryCaption
      search=""
    >
      GotNoThumb :O
    </CategoryListItem__CategoryCaption>
  </CategoryListItem__StyledLink>
  <CategoryListItem__SubCategory>
    <CategoryListItem__StyledLink
      to="/augsburg/de/willkommen/willkommen-in-augsburg"
    >
      <CategoryListItem__SubCategoryCaption
        search=""
      >
        GotNoThumb :O
      </CategoryListItem__SubCategoryCaption>
    </CategoryListItem__StyledLink>
  </CategoryListItem__SubCategory>
</CategoryListItem__Row>
`;
